# HadesMainMenuAPI

./: .gitmodules  CMakeLists.txt
.github/workflows/: build.yml
libs/EASTL-forge1.51/: string.h
libs/lua-5.2.2/: CMakeLists.txt
module/: CMakeLists.txt
module/include/: HadesModApi.h
module/scripts/: API.lua  Localizations.sjson  init.lua  meta.sjson  types.lua
module/src/: FunctionHook.h  Gamemode.cpp  Gamemode.h  GamemodeManager.cpp  GamemodeManager.h  GamemodeScreen.cpp  GamemodeScreen.h  HookTable.cpp  HookTable.h  HookedClassFactory.h  HookedMenuScreen.cpp  HookedMenuScreen.h  LibraryComponents.cpp  LibraryComponents.h  MainMenuHandler.cpp  MainMenuHandler.h  Mem.cpp  allocator_forge_simple_impl.cpp  main.cpp
module/src/interface/: Color.h  ComponentData.h  ComponentDataDef.h  GUIAction.h  GUIComponent.h  GUIComponentButton.h  GUIComponentReflectionHelper.h  GUIComponentTextBox.h  GUIFlasher.h  GameData.h  GameScreen.h  GuiComponentType.h  HashGuid.h  IGUIComponentContainer.h  IRectangle.h  IRenderComponent.h  MainMenuScreen.h  MenuScreen.h  Rectangle.h  ScreenData.h  ScreenManager.h  TimeSpan.h  Vector2.h  allocator.h  eastl_string.h  helpers.h
module/src/lua/: LuaCallback.cpp  LuaCallback.h  LuaClass.h  LuaFunctionDefs.cpp  LuaFunctionDefs.h  LuaGUIComponentButtonFunctionDefs.cpp  LuaGUIComponentButtonFunctionDefs.h  LuaGUIFunctionDefs.cpp  LuaGUIFunctionDefs.h  LuaGamemodeFunctionDefs.cpp  LuaManager.h  LuaMenuScreenDefs.cpp  WrapperClasses.h  lua.hpp
module/src/lua/classes/: GuiComponentButtonUserData.h  GuiComponentTextBoxUserData.h  GuiComponentUserData.h  GuiMenuScreenUserData.h  WrapperClasses.h
module/src/lua/defs/: LuaGUIComponentButtonFunctionDefs.cpp  LuaGUIComponentFunctionDefs.cpp  LuaGUIComponentFunctionDefs.h  LuaGUIComponentTextBoxFunctionDefs.cpp  LuaGUIComponentTextBoxFunctionDefs.h  LuaGamemodeFunctionDefs.cpp  LuaGamemodeFunctionDefs.h  LuaMainMenuScreenFunctionDefs.cpp  LuaMainMenuScreenFunctionDefs.h  LuaMenuScreenDefs.cpp  LuaMenuScreenDefs.h
module/src/lua/helpers/: LuaCallback.cpp  LuaClass.h
